Setting home page for portfolio website

--- a/index.html
+++ b/index.html
@@ -5,9 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css" />
+    <style>
+      h1 {
+        text-align: center;
+        background-color: azure;
+      }
+      section {
+        background-color: chocolate;
+        padding: 0.5em;
+        border: 1px solid black;
+        margin-bottom: 1em;
+      }
+      footer {
+        background-color: yellowgreen;
+        text-align: center;
+        padding: 0.8em 0;
+        font-size: 1.5em;
+      }
+    </style>
   </head>
   <body>
     <h1>Git and GitHub tutorial</h1>
+    <article>
+      <section>
+        <h2>Section 1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          delectus quasi architecto voluptatem non minima explicabo illum
+          aliquam voluptatibus expedita, impedit facere placeat in magnam eaque
+          mollitia totam maxime numquam corporis dignissimos nesciunt!
+          Provident, nobis? Quam accusamus consequuntur voluptatem ab quos dolor
+          aut est atque error, hic quidem enim explicabo.
+        </p>
+      </section>
+      <section>
+        <h2>Section 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          delectus quasi architecto voluptatem non minima explicabo illum
+          aliquam voluptatibus expedita, impedit facere placeat in magnam eaque
+          mollitia totam maxime numquam corporis dignissimos nesciunt!
+          Provident, nobis? Quam accusamus consequuntur voluptatem ab quos dolor
+          aut est atque error, hic quidem enim explicabo.
+        </p>
+      </section>
+      <section>
+        <h2>Section 3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          delectus quasi architecto voluptatem non minima explicabo illum
+          aliquam voluptatibus expedita, impedit facere placeat in magnam eaque
+          mollitia totam maxime numquam corporis dignissimos nesciunt!
+          Provident, nobis? Quam accusamus consequuntur voluptatem ab quos dolor
+          aut est atque error, hic quidem enim explicabo.
+        </p>
+      </section>
+      <section>
+        <h2>Section 4</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          delectus quasi architecto voluptatem non minima explicabo illum
+          aliquam voluptatibus expedita, impedit facere placeat in magnam eaque
+          mollitia totam maxime numquam corporis dignissimos nesciunt!
+          Provident, nobis? Quam accusamus consequuntur voluptatem ab quos dolor
+          aut est atque error, hic quidem enim explicabo.
+        </p>
+      </section>
+      <section>
+        <h2>Section 5</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          delectus quasi architecto voluptatem non minima explicabo illum
+          aliquam voluptatibus expedita, impedit facere placeat in magnam eaque
+          mollitia totam maxime numquam corporis dignissimos nesciunt!
+          Provident, nobis? Quam accusamus consequuntur voluptatem ab quos dolor
+          aut est atque error, hic quidem enim explicabo.
+        </p>
+      </section>
+    </article>
+    <footer>@portfolio 2024</footer>
     <script type="module" src="./assets/script.js"></script>
   </body>
 </html>
